@@ -1,3 +1,8 @@
+2006-10-14  Ville Vainio  <vivainio@gmail.com>
+
+	* Magic.py, ipython.el: applied first part of Rocky Bernstein's
+	patch set for pydb integration.
+
 2006-10-12  Ville Vainio  <vivainio@gmail.com>
 
 	* jobctrl.py: Add new "jobctrl" extension for spawning background
